# financial_assistant

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
src/financial_assistant/: create_app.py  db_utils.py  models.py  utils.py  views.py
src/financial_assistant/static/scripts/: index.js  main.js
src/financial_assistant/static/styles/: index.css
src/financial_assistant/templates/: create_task.html  index.html  main_page.html  page.html  profile.html  start.html
templates/: index.html
