[tool.poetry]
name = "financial_assistant"
version = "0.1.0"
description = "simpl service for financial surveillance"
authors = ["smapl <a.mustafin00@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
requests = "^2.24.0"
redis = "^3.5.3"
loguru = "^0.5.3"
pymongo = "^3.11.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
